# gm82angle

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  desktop.ini  gm82angle.gej  gm82shdcmp.gej  readme.txt
.github/workflows/: cmake.yml
anvil/: anvil.gm82
anvil/backgrounds/: index.yyd
anvil/objects/: Button.gml  Scrollbar.gml  TextArea.gml
anvil/scripts/: button_actions.gml  cli_compile.gml  clipboard_cleanup.gml  compile_shader.gml  compile_shadertoy.gml  compile_studio.gml  copy_ps.gml  copy_uniforms.gml  copy_vs.gml  create.gml  createui.gml  drawui.gml  globalvars.gml  hlsl_output_uniforms.gml  index.yyd  load_shader.gml  output_uniforms.gml  pack_shader.gml  reload_shader.gml  save_as.gml  save_shader.gml  textarea_get.gml  textfield_actions.gml  textfield_set.gml  tree.yyd  update_window.gml  variable_name.gml
anvil/settings/: constants.txt  extensions.txt
anvil/sprites/: tree.yyd
anvil/sprites/sprButtonIcons/: sprite.txt
lib/: angle_shader_translator.lib
source/: gm82angle.cpp  gm82angle.gml  gm82shdcmp.cpp  gm82shdcmp.h
ui/backgrounds/: tree.yyd
ui/objects/: Button.gml  TextArea.gml  TextField.gml  index.yyd  tree.yyd
ui/rooms/rmMain/: room.txt
ui/scripts/: button_actions.gml  button_draw.gml  button_held.gml  compile_shader.gml  compile_shadertoy.gml  compile_studio.gml  copy_uniforms.gml  create.gml  createui.gml  detect_texture_access_in_vs.gml  drawtooltip.gml  drawui.gml  edit_shader.gml  globalvars.gml  index.yyd  load_shader.gml  output_uniforms.gml  pack_shader.gml  save_as.gml  save_shader.gml  textarea_draw.gml  textarea_set.gml  textfield_activate.gml  tree.yyd  update_window.gml
ui/settings/: constants.txt  extensions.txt  settings.txt
ui/sprites/: index.yyd
